# doti18n

./: .gitattributes  .gitignore  404.html  DOCS.md  LICENSE  Makefile  index.html  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: gh_deploy.yml  python-publish.yml
assets/javascripts/: logo.js
assets/stylesheets/: extra.css
cheatsheet/: index.html
cli/lint/: index.html
cli/stub/: index.html
cli/studio/: index.html
docs/: mkdocs.yaml
docs/pages/: cheatsheet.md  getting_started.md  index.md
docs/pages/cli/: lint.md  stub.md  studio.md
docs/pages/integrations/: django.md  fastapi.md  flask.md  setup.md  telegram_api.md
docs/pages/usage/: configuration.md  custom_loaders.md  formatting.md  icumf.md  macros.md  pluralization.md  supported_formats.md
doti18n/: __init__.py  errors.py  locale_data.py  locale_translator.py  utils.py
doti18n/cli/: __init__.py
doti18n/cli/commands/: __init__.py
doti18n/cli/commands/generate_stub/: command.py  formatted_string_stub.py  generate_code.py  icumf_stub.py  plural_stub.py
doti18n/cli/commands/lint/: command.py  lint.py
doti18n/cli/commands/stub/: command.py  formatted_stub.py  generate_code.py  icumf_stub.py  plural_stub.py
doti18n/cli/commands/studio/: auth.py  command.py  http_routes.py  server.py  state.py  ws_routes.py
doti18n/cli/commands/studio/events/: __init__.py  editing.py  update_key.py
doti18n/icumf/: __init__.py  nodes.py  parser.py
doti18n/icumf/formatters/: __init__.py  base.py  count.py  date.py  html.py  markdown.py  number.py  plural.py  select.py  selectordinal.py
doti18n/loaders/: __init__.py  base_loader.py  json_loader.py  toml_loader.py  xml_loader.py  yaml_loader.py
doti18n/wrapped/: __init__.py  locale_list.py  locale_namespace.py  none_wrapper.py  plural_wrapper.py  string_wrapper.py
getting_started/: index.html
integrations/django/: index.html
integrations/fastapi/: index.html
integrations/flask/: index.html
integrations/setup/: index.html
integrations/telegram_api/: index.html
search/: search_index.json
src/doti18n/: __init__.py  locale_data.py  locale_translator.py  utils.py
src/doti18n/loaders/: __init__.py  base_loader.py  json_loader.py  yaml_loader.py
src/doti18n/wrapped/: __init__.py  locale_list.py  locale_namespace.py  none_wrapper.py  plural_wrapper.py  string_wrapper.py
tests/: __init__.py  test_fallback.py  test_json_loader.py  test_loaders_api.py  test_loading.py  test_loading_edge_cases.py  test_locale_data_api.py  test_nested.py  test_non_strict.py  test_plural.py  test_strict.py
usage/configuration/: index.html
usage/custom_loaders/: index.html
usage/formatting/: index.html
usage/icumf/: index.html
usage/macros/: index.html
usage/pluralization/: index.html
usage/supported_formats/: index.html
(+15 files in other folders)
