[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doti18n"
version = "0.10.0"
description = "Python library for loading localizations with dot access and pluralization."
readme = { file = "readme.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    {name = "darkj3suss", email = "asdzxco@protonmail.com"}
]
keywords = ["localization", "i18n", "l10n", "translate", "translation", "yaml", "json", "yml", "toml", "xml",
    "text processing", "dot access", "pluralization", "babel", "icu", "icumf", "icu message format", "message format",
    "gettext", "fastapi", "flask", "django", "web", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "babel==2.17.0",
    "colorlog==6.10.1",
]


[project.optional-dependencies]
yaml = [
    "PyYAML==6.0.2",
]
studio = [
    "tenjin==1.1.1",
    "microdot==2.6.0",
    "tomlkit==0.14.0",
    "ruamel.yaml==0.19.1",
]


[tool.setuptools.package-data]
doti18n = ["cli/commands/studio/templates/*.html", "cli/commands/studio/static/style.css", "cli/commands/studio/static/js/*.js"]

[project.scripts]
doti18n = "doti18n.cli:main"


[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "vendor"
]


[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90", "N", "D"]
ignore = ["D203", "D211", "D104", "D212", "D100", "F403", "F405", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["doti18n"]


[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | vendor
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = ["venv", "tests/", "vendor/"]


[project.urls]
Homepage = "https://github.com/darkj3suss/doti18n"
BugTracker = "https://github.com/darkj3suss/doti18n/issues"
Repository = "https://github.com/darkj3suss/doti18n"
Documentation = "https://darkj3suss.github.io/doti18n/"
